# reviewbot

./: .dockerignore  .env.docker  .env.example  .gcloudignore  .gitignore  CLAUDE.md  DEVELOPER_NOTES.md  DOCKER_GUIDE.md  DOCKER_SUMMARY.md  Dockerfile  Makefile  QUICK_REFERENCE.md  README.md  docker-compose.yml  fails.json  failures.txt  main.py  pytest.ini  requirements.txt  review-report.html  setup.py  test_output.txt
ai-agents/recorder/: .env.example  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
ai-agents/recorder/.agent/: README.md
ai-agents/recorder/.agent/skills/: README.md  backend-fastapi-async.md  meeting-pipeline.md  persona-orchestration.md  project-brain-indexing.md  testing-and-smoke-checks.md  voice-interface.md
ai-agents/recorder/docs/: design.md  requirements.md
ai-agents/recorder/docs/use-cases/: live-local-obs-session.md  teams-bot-future.md  uploaded-recording-analysis.md
ai-agents/recorder/src/recorder/: main.py
ai-agents/recorder/src/recorder/agents/onboarding/: states.py
ai-agents/recorder/src/recorder/agents/orchestrator/: states.py
ai-agents/recorder/src/recorder/agents/persona/: states.py
ai-agents/recorder/src/recorder/agents/templates/: architect.py  business_analyst.py  data_engineer.py  default_expert.py  devops.py  pm.py  (+1 more)
ai-agents/recorder/src/recorder/core/: config.py  exceptions.py  logging.py
ai-agents/recorder/src/recorder/db/: models.py  session.py
ai-agents/recorder/src/recorder/pipeline/: audio_extractor.py  chunking.py  file_watcher.py  relevance_scorer.py  transcription.py
ai-agents/recorder/src/recorder/project_brain/: code_indexer.py  context_injection.py  document_indexer.py  incremental_sync.py  profile_card.py  setup_wizard.py
ai-agents/recorder/src/recorder/schemas/: persona.py  project.py  session.py  transcript.py
ai-agents/recorder/src/recorder/services/: briefing_generator.py  conflict_detector.py  export.py  health_monitor.py  session_manager.py
ai-agents/recorder/src/recorder/vector_store/: client.py  namespaces.py  retrieval.py
ai-agents/recorder/src/recorder/voice/: audio_router.py  stt.py  tts.py  wake_word.py
(+246 files in other folders)
