[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nexus-recorder"
version = "0.1.0"
description = "Nexus AI — Multi-Agent Meeting Intelligence System"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",

    # Database
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # AI / LLM
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "openai>=1.25.0",
    "anthropic>=0.26.0",

    # Transcription
    "faster-whisper>=1.0.0",

    # Embeddings + Vector Store
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",

    # Audio processing
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",

    # Wake word / hotkey
    "pynput>=1.7.7",

    # Code indexing
    "tree-sitter>=0.22.0",
    "gitpython>=3.1.43",

    # Document parsing
    "pypdf2>=3.0.1",
    "python-docx>=1.1.0",
    "unstructured>=0.14.0",
    "beautifulsoup4>=4.12.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # File watching
    "watchdog>=4.0.0",

    # HTTP client (external connectors)
    "httpx>=0.27.0",

    # PDF export
    "reportlab>=4.2.0",

    # Utilities
    "structlog>=24.0.0",
    "tenacity>=8.3.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
